force-app/main/default/objects/Commission__c/fields/Amount__c.field-meta.xml
<CustomField>
  <fullName>Amount__c</fullName>
  <label>Amount</label>
  <type>Currency</type>
  <precision>18</precision>   <!-- total digits -->
  <scale>2</scale>            <!-- digits after decimal -->
</CustomField>