force-app/main/default/objects/Commission__c/fields/Paid__c.field-meta.xml
<CustomField>
  <fullName>Paid__c</fullName>
  <label>Paid</label>
  <type>Checkbox</type>
  <defaultValue>false</defaultValue>
</CustomField>