force-app/main/default/objects/Commission__c/fields/PaidDate__c.field-meta.xml
<CustomField>
  <fullName>PaidDate__c</fullName>
  <label>Paid Date</label>
  <type>Date</type>
</CustomField>