force-app/main/default/objects/Commission__c/fields/Percentage__c.field-meta.xml
<CustomField>
  <fullName>Percentage__c</fullName>
  <label>Percentage</label>
  <type>Percent</type>
  <precision>5</precision>   <!-- total digits -->
  <scale>2</scale>           <!-- digits after decimal -->
</CustomField>